change posts to an aside class

--- a/src/app/postlist/postlist.component.html
+++ b/src/app/postlist/postlist.component.html
@@ -1,5 +1,6 @@
 <li class="list-group-item">
-	<h2>{{postTitle}}</h2>
-	<p>{{postContent}}</p>
-	<p><strong>{{postLoveIts}}</strong></p>
+	nothing here now
+	<h2>{{monPost}}</h2>
+<!-- 	<p>{{monPost.content}}</p>
+	<p><strong>{{monpost.loveIts}}</strong></p> -->
 </li>
