--- a/src/app/postlist/postlist.component.html
+++ b/src/app/postlist/postlist.component.html
@@ -1,6 +1,7 @@
-<li class="list-group-item">
+<li class="list-group-item" *ngFor='let post of posts'>
 	nothing here now
-	<h2>{{monPost}}</h2>
-<!-- 	<p>{{monPost.content}}</p>
-	<p><strong>{{monpost.loveIts}}</strong></p> -->
+  <h2>{{post.title}}</h2>
+    <p>{{post.content}}</p>
+    <p><strong>{{post.loveIts}}</strong></p>
+    <p>Created at : {{post.createdAt | date: 'yMMMMEEEEd ss.SSS'}}</p>
 </li>
