Deplace post content from postList to postListItem

--- a/src/app/postlist/postlist.component.html
+++ b/src/app/postlist/postlist.component.html
@@ -1,7 +1,7 @@
-<li class="list-group-item" *ngFor='let post of posts'>
-
-  <h2>{{post.title}}</h2>
-    <p>{{post.content}}</p>
+<li class="list-group-item" *ngFor='let post of posts' (click)="onSelect(post)">
+    <h2>{{post.title}}</h2>
     <p><strong>{{post.loveIts}}</strong></p>
     <p>Created at : {{post.createdAt | date: 'yMMMMEEEEd ss.SSS'}}</p>
 </li>
+
+<app-postlistitem [post]="selectedPost"></app-postlistitem >
