--- a/src/app/postlistitem/postlistitem.component.html
+++ b/src/app/postlistitem/postlistitem.component.html
@@ -1,3 +1,6 @@
-<p>
-  postlistitem works!
-</p>
+<div *ngIf='post'>
+  <h2>{{post.title | uppercase}}: </h2>
+  <p>{{post.content}}</p>
+  <p><strong>{{post.loveIts}}</strong></p>
+  <p>Created at : {{post.createdAt | date: 'yMMMMEEEEd ss.SSS'}}</p>
+</div>
