--- a/src/app/postlistitem/postlistitem.component.html
+++ b/src/app/postlistitem/postlistitem.component.html
@@ -2,5 +2,5 @@
   <h2>{{post.title | uppercase}}: </h2>
   <p>{{post.content}}</p>
   <p><strong>{{post.loveIts}}</strong></p>
-  <p>Created at : {{post.createdAt | date: 'yMMMMEEEEd ss.SSS'}}</p>
+  <p>Created at : {{post.createdAt | date: 'y MMMM EEEE d hh:mm:ss'}}</p>
 </div>
