--- a/src/app/postlist/postlist.component.html
+++ b/src/app/postlist/postlist.component.html
@@ -1,6 +1,9 @@
-<li class="list-group-item" *ngFor='let post of posts'>
+<li [ngClass]="{'list-group-item': true,
+              'list-group-item-success': post.loveIts > 0,
+              'list-group-item-danger': post.loveIts < 0 }"
+    *ngFor='let post of posts'>
     <h2 (click)="onSelect(post)">{{post.title}}</h2>
-    <p><strong>{{post.loveIts}}</strong></p>
+    <p>Compteur de Love It : <strong>{{post.loveIts}}</strong></p>
     <p>Created at : {{post.createdAt | date: 'y MMMM EEEE d hh:mm:ss'}}</p>
     <button class='btn btn-success' (click)="onLoveIt(post)">Love It</button>
     <button class="btn btn-danger" (click)="onDontLoveIt(post)"> Yuuuk </button>
