Add cosmethic stuffs for readability

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
       <h1>
         {{ title }}
       </h1>
+      <p>Cliquez sur un titre pour afficher le contenu de l'article.</p>
+      <p>Ce Lorem Ipsum vous est présenté par <a href="https://hipsum.co/">Hispum</a> : Un générateur ne contenant que des mots de Hipster.</p>
+      <br>
       <ul class="list-group">
         <app-postlist></app-postlist>
       </ul>
