--- a/src/app/postlistitem/postlistitem.component.html
+++ b/src/app/postlistitem/postlistitem.component.html
@@ -1,6 +1,6 @@
 <div *ngIf='post'>
   <h2>{{post.title | uppercase}}: </h2>
   <p>{{post.content}}</p>
-  <p><strong>{{post.loveIts}}</strong></p>
+  <p>Compteur de Love It : <strong>{{post.loveIts}}</strong></p>
   <p>Created at : {{post.createdAt | date: 'y MMMM EEEE d hh:mm:ss'}}</p>
 </div>
