--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,24 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse"  id="navbarNavAltMarkup">
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active" class="nav-item">
+          <a class="nav-link" routerLink="Posts">Liste d'Articles</a>
+        </li>
+        <li routerLinkActive="active" class="nav-item">
+          <a class="nav-link" routerLink="New">Ecrire un Article</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h1>
-        {{ title }}
-      </h1>
-      <p>Cliquez sur un titre pour afficher le contenu de l'article.</p>
-      <p>Ce Lorem Ipsum vous est présenté par <a href="https://hipsum.co/">Hispum</a> : Un générateur ne contenant que des mots de Hipster.</p>
-      <br>
-      <ul class="list-group">
-        <app-postlist></app-postlist>
-      </ul>
+        <router-outlet></router-outlet>
     </div>
   </div>
 </div>
