--- a/src/app/postlist/postlist.component.html
+++ b/src/app/postlist/postlist.component.html
@@ -1,12 +1,20 @@
-<li [ngClass]="{'list-group-item': true,
-              'list-group-item-success': post.loveIts > 0,
-              'list-group-item-danger': post.loveIts < 0 }"
-    *ngFor='let post of posts'>
-    <h2 (click)="onSelect(post)">{{post.title}}</h2>
-    <p>Compteur de Love It : <strong>{{post.loveIts}}</strong></p>
-    <p>Created at : {{post.createdAt | date: 'y MMMM EEEE d hh:mm:ss'}}</p>
-    <button class='btn btn-success' (click)="onLoveIt(post)">Love It</button>
-    <button class="btn btn-danger" (click)="onDontLoveIt(post)"> Yuuuk </button>
-</li>
+<h1>
+  {{ title }}
+</h1>
+<p>Cliquez sur un titre pour afficher le contenu de l'article.</p>
+<p>Ce Lorem Ipsum vous est présenté par <a href="https://hipsum.co/">Hispum</a> : Un générateur ne contenant que des mots de Hipster.</p>
 <br>
-<app-postlistitem [post]="selectedPost"></app-postlistitem >
+<ul class="list-group">
+  <li [ngClass]="{'list-group-item': true,
+                'list-group-item-success': post.loveIts > 0,
+                'list-group-item-danger': post.loveIts < 0 }"
+      *ngFor='let post of posts'>
+      <h2 (click)="onSelect(post)">{{post.title}}</h2>
+      <p>Compteur de Love It : <strong>{{post.loveIts}}</strong></p>
+      <p>Created at : {{post.createdAt | date: 'y MMMM EEEE d hh:mm:ss'}}</p>
+      <button class='btn btn-success' (click)="onLoveIt(post)">Love It</button>
+      <button class="btn btn-danger" (click)="onDontLoveIt(post)"> Yuuuk </button>
+  </li>
+  <br>
+  <app-postlistitem [post]="selectedPost"></app-postlistitem >
+</ul>
