--- a/src/app/newpost/newpost.component.html
+++ b/src/app/newpost/newpost.component.html
@@ -1,3 +1,16 @@
-<p>
-  newpost works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <h2>Ecrire un nouvel article</h2>
+    <form [formGroup]="postForm" (ngSubmit)="onSavePost()">
+      <div class="form-group">
+        <label for="title">Titre</label>
+        <input type="text" class="form-control" id="title" formControlName="title">
+      </div>
+      <div class="form-group">
+        <label for="content">Auteur</label>
+        <input type="textarea" class="form-control" id="content" formControlName="content">
+      </div>
+      <button class="btn btn-success" [disabled]="postForm.invalid" type="submit">Enregistrer</button>
+    </form>
+  </div>
+</div>
